--- a/index.html
+++ b/index.html
@@ -204,7 +204,26 @@
     color: #666;
     margin-top: 0.5rem;
 }
+/* Style for the second project carousel */
+#project2 {
+    margin-top: 3rem;
+    background: #f9f9f9;
+    padding: 2rem 0;
+    text-align: center;
+    border-radius: 10px;
+}
 
+#project2 h3 {
+    color: #007BFF;
+    margin-bottom: 1rem;
+}
+
+.carousel img {
+    max-width: 90%;
+    height: auto;
+    border-radius: 10px;
+    margin: 0 auto;
+}
 .download-btn {
     display: inline-block;
     margin-top: 20px;
@@ -513,6 +532,73 @@
             <img src="p1ifvslnpktba1kpoun71350132s4-9.png" alt="Slide 10">
         </div>
     </div>
+        <section id="project2">
+    <h2>Another Project Presentation</h2>
+    <p>
+        Discover the details of my second project through the presentation slides below.
+    </p>
+    <!-- New Carousel Container -->
+    <div class="carousel">
+        <div class="carousel-slide">
+            <img src="assets/projects/slides/project2-slide-1.png" alt="Slide 1">
+        </div>
+        <div class="carousel-slide">
+            <img src="assets/projects/slides/project2-slide-2.png" alt="Slide 2">
+        </div>
+        <div class="carousel-slide">
+            <img src="assets/projects/slides/project2-slide-3.png" alt="Slide 3">
+        </div>
+    </div>
+    <!-- Carousel Controls -->
+    <button class="carousel-btn prev" onclick="moveSlide(-1)">&#10094;</button>
+    <button class="carousel-btn next" onclick="moveSlide(1)">&#10095;</button>
+</section>
+<section id="project2">
+    <p>
+        Discover the details of my Clustering Analysis project through the presentation slides below.
+    </p>
+    <h4>Analayzing Chronic Kidney Diseases using Clustering </h4>
+    <!-- New Carousel Container -->
+    <div class="carousel">
+        <div class="carousel-slide">
+            <img src="C:\Users\harsh\Downloads\Chronic Diseases PPT_00002.png" alt="Slide 1">
+        </div>
+        <div class="carousel-slide">
+            <img src="C:\Users\harsh\Downloads\Chronic Diseases PPT_00003.png" alt="Slide 2">
+        </div>
+        <div class="carousel-slide">
+            <img src="C:\Users\harsh\Downloads\Chronic Diseases PPT_00004.png" alt="Slide 3">
+        </div>
+        <div class="carousel-slide">
+            <img src="C:\Users\harsh\Downloads\Chronic Diseases PPT_00005.png" alt="Slide 4">
+        </div>
+        <div class="carousel-slide">
+            <img src="C:\Users\harsh\Downloads\Chronic Diseases PPT_00006.png" alt="Slide 5">
+        </div>
+        <div class="carousel-slide">
+            <img src="C:\Users\harsh\Downloads\Chronic Diseases PPT_00007.png"alt="Slide 6">
+        </div>
+        <div class="carousel-slide">
+            <img src="C:\Users\harsh\Downloads\Chronic Diseases PPT_00008.png" alt="Slide 7">
+        </div>
+        <div class="carousel-slide">
+            <img src="C:\Users\harsh\Downloads\Chronic Diseases PPT_00009.png" alt="Slide 8">
+        </div>
+        <div class="carousel-slide">
+            <img src="C:\Users\harsh\Downloads\Chronic Diseases PPT_00010.png" alt="Slide 3">
+        </div>
+        <div class="carousel-slide">
+            <img src="C:\Users\harsh\Downloads\Chronic Diseases PPT_00011.png" alt="Slide 9">
+        </div>
+        <div class="carousel-slide">
+            <img src="C:\Users\harsh\Downloads\Chronic Diseases PPT_00012.png" alt="Slide 10">
+        </div>
+    </div>
+    <!-- Carousel Controls -->
+    <button class="carousel-btn prev" onclick="moveSlide(-1)">&#10094;</button>
+    <button class="carousel-btn next" onclick="moveSlide(1)">&#10095;</button>
+</section>
+
         <!-- Carousel Controls -->
     <button class="carousel-btn prev" onclick="moveSlide(-1)">&#10094;</button>
     <button class="carousel-btn next" onclick="moveSlide(1)">&#10095;</button>
