--- a/index.html
+++ b/index.html
@@ -536,37 +536,37 @@
     <!-- New Carousel Container -->
     <div class="carousel">
         <div class="carousel-slide">
-            <img src="C:\Users\harsh\Downloads\Chronic Diseases PPT_00002.png" alt="Slide 1">
+            <img src="Chronic Diseases PPT_00002.png" alt="Slide 1">
         </div>
         <div class="carousel-slide">
-            <img src="C:\Users\harsh\Downloads\Chronic Diseases PPT_00003.png" alt="Slide 2">
+            <img src="Chronic Diseases PPT_00003.png" alt="Slide 2">
         </div>
         <div class="carousel-slide">
-            <img src="C:\Users\harsh\Downloads\Chronic Diseases PPT_00004.png" alt="Slide 3">
+            <img src="Chronic Diseases PPT_00004.png" alt="Slide 3">
         </div>
         <div class="carousel-slide">
-            <img src="C:\Users\harsh\Downloads\Chronic Diseases PPT_00005.png" alt="Slide 4">
+            <img src="Chronic Diseases PPT_00005.png" alt="Slide 4">
         </div>
         <div class="carousel-slide">
-            <img src="C:\Users\harsh\Downloads\Chronic Diseases PPT_00006.png" alt="Slide 5">
+            <img src="Chronic Diseases PPT_00006.png" alt="Slide 5">
         </div>
         <div class="carousel-slide">
-            <img src="C:\Users\harsh\Downloads\Chronic Diseases PPT_00007.png"alt="Slide 6">
+            <img src="Chronic Diseases PPT_00007.png"alt="Slide 6">
         </div>
         <div class="carousel-slide">
-            <img src="C:\Users\harsh\Downloads\Chronic Diseases PPT_00008.png" alt="Slide 7">
+            <img src="Chronic Diseases PPT_00008.png" alt="Slide 7">
         </div>
         <div class="carousel-slide">
-            <img src="C:\Users\harsh\Downloads\Chronic Diseases PPT_00009.png" alt="Slide 8">
+            <img src="Chronic Diseases PPT_00009.png" alt="Slide 8">
         </div>
         <div class="carousel-slide">
-            <img src="C:\Users\harsh\Downloads\Chronic Diseases PPT_00010.png" alt="Slide 3">
+            <img src="Chronic Diseases PPT_00010.png" alt="Slide 3">
         </div>
         <div class="carousel-slide">
-            <img src="C:\Users\harsh\Downloads\Chronic Diseases PPT_00011.png" alt="Slide 9">
+            <img src="Chronic Diseases PPT_00011.png" alt="Slide 9">
         </div>
         <div class="carousel-slide">
-            <img src="C:\Users\harsh\Downloads\Chronic Diseases PPT_00012.png" alt="Slide 10">
+            <img src="Chronic Diseases PPT_00012.png" alt="Slide 10">
         </div>
     </div>
     <!-- Carousel Controls -->
