--- a/index.html
+++ b/index.html
@@ -492,8 +492,8 @@
         <p>
         Explore the key details of the project through the following presentation slides. Click the arrows to navigate.
         </p>
-    <p>Product Classification Using Machine Learning
-    </p>
+    <h3>Product Classification Using Machine Learning
+    </h3>
         <!-- Carousel Container -->
     <div class="carousel">
         <div class="carousel-slide">
